testsuite/poke.pkl/index-diag-1.pk
/* { dg-do compile } */

23[2]; /* { dg-error "must be an array or a string" } */
